[package]
name = "STRdust"
version = "0.11.3"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
env_logger = "0.11.7"
flate2 = "1.1.0"
log = "0.4.26"
rayon = "1.5.3"
rust-htslib = { version = "0.49.0", features = ["s3", "curl"] }
bio = "2.2.0"
human-sort = "0.2.2"
minimap2 = { version = "0.1.20", features = ["htslib"] }
kodama = "0.3.0"
regex = "1.11.1"
url = "2.5.4"
distance = "0.4.0"
levenshtein = "1.0.5"
rand = "0.9.0"
libz-sys = "1.1.21"
libc = "0.2.171"
petgraph = "0.7.1"
hts-sys = "2.1.1"
reqwest = { version = "0.12.13", features = ["blocking", "json"] }
indicatif = { version = "0.17.11", features = ["rayon"] }
chrono = "0.4.40"

[dev-dependencies]
ctor = "*"
