[package]
name = "STRdust"
version = "0.18.0"
edition = "2024"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
env_logger = "0.11.8"
flate2 = "1.1.2"
log = "0.4.27"
rayon = "1.5.3"
rust-htslib = { git = "https://github.com/wdecoster/rust-htslib", features = ["s3", "curl"] }
bio = "3.0.0"
minimap2 = { version = "0.1.20", features = ["htslib"] }
kodama = "0.3.0"
regex = "1.11.1"
url = "2.5.4"
rand = "0.10.0"
hts-sys = "2.1.1"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
indicatif = { version = "0.18.0", features = ["rayon"] }


[dev-dependencies]
ctor = "*"

[lints.clippy]
# Allow functions with many arguments - common in systems programming
# where functions need many parameters for configuration and data processing
too_many_arguments = "allow"

[profile.release]
debug = true